--- a/Assignment_6A/index.html
+++ b/Assignment_6A/index.html
@@ -35,7 +35,7 @@
 </body>
 <script>
     function changeTextP1(){
-        document.getElementById("para-1").innerHTML="This text is changed using internal javascript"
+        document.getElementById("para-1").innerHTML="This text is updated using internal javascript"
     }
 </script>
 </html>
